# EasyLive

./: README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/versions/: d32ba717e761_create_chemicals_and_suppliers_tables.py
app/core/connections/: config.py  database.py
